--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ matrix:
       -b beta; fi;
     - export PATH=`pwd`/flutter/bin:`pwd`/flutter/bin/cache/dart-sdk/bin:$PATH
     - sudo chmod -R 777 flutter/*
+    - cd ios && pod update Firebase/Auth && cd ..
     before_script:
     - flutter doctor
     script:
