--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
 
 
   # firebase dependencies
-  firebase_auth: ^0.8.1+3
+  firebase_auth: ^0.8.3
 
   # other packages
   meta: ^1.1.6
