--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,7 +24,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>com.hvl.expo</string>
+			<string>no.hvlexpo.app</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.googleusercontent.apps.54626777503-gdfg484ktrk3m5bght835qu1gdofubri</string>
