--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   photo_view: ^0.2.2
 
   # qr related
-  qr_mobile_vision: ^0.2.2
+  fast_qr_reader_view:
+    git: https://github.com/facundomedica/fast_qr_reader_view
   qr: ^1.0.1
 
   # built value types
