--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dev_dependencies:
     sdk: flutter
   flutter_test:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   build_runner: ^1.0.0
   built_value_generator: ^6.1.4
   intl_translation: ^0.17.3
